[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-openenv"
version = "0.1.0"
description = "AI agent environment for automated code review evaluation"
authors = [
    { name = "Ajashia Techno Wizards" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "httpx",
    "openai"
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*", "tests*"]